# AI-Gen-Reimbursement-Docs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COSMIC 项目分析报告.md  README.md  ard.iss  ard_v5.0.0  build_exe.ps1  cosmic_v1.0.0  cosmic_v5.0.0  data.enc  pyproject.toml  template.xlsx  优化方案.md  拆分表.md  最终结果.xlsx  系统缺陷.md  结果_拆分表.xlsx  闽市移需【202502】17639号64-关于和乐业务叠加态业务办理的需求（和乐业）项目需求说明书V1.0.0.docx
.claude/: settings.json  settings.local.json
1111/: 闽市移需【202501】17658 号-关于构建垂直行业场景化营销的需求（和乐业）-FPA工作量评估.xlsx
AI-Outputs/: 项目功能点拆分表_to_check.xlsx  项目需求清单.xlsx
ai_gen_reimbursement_docs/: auth.py  config_utils.py  constants.py  cosmic_ai.py  cosmic_confirmation.py  cosmic_llm.py  cosmic_md.py  cosmic_models.py  cosmic_validator.py  cosmic_writer.py  excel_source.py  excel_writer.py  exceptions.py  fpa_agent_review.py  fpa_confirmation.py  fpa_facts.py  fpa_merge_review.py  fpa_profiles.py  fpa_quality_review.py  fpa_stability_report.py  fpa_stability_sampler.py  fpa_type_judgement.py  fpa_validator.py  gen_cosmic.py  gen_fpa.py  gen_list.py  gen_spec.py  gen_xlsx.py  llm_client.py  main.py  md_handler.py  models.py  module_utils.py  pipeline.py  pipeline_callbacks.py  requirements.txt  run_history.py  runtime_context.py  spec_template_importer.py  template_manifest.py  (+1 more)
config/: .env.example  ai_system_prompts_config.yaml.example  business_rules.yaml  business_rules.yaml.example  docx_expected_result.example.json  docx_parse_mapping_rules.yaml.example  domain_context.json.example  fpa_config.yaml.example  fpa_judgement_rules.yaml.example  fpa_rule_sets_config.yaml.example  fpa_system_prompts_config.yaml.example  fpa_user_prompts_config.yaml.example  system_config.yaml  system_config.yaml.example  word_styles_template.yaml
cosmic_tool/: .env.example  business.env.example  config_utils.py  constants.py  cosmic_llm.py  docx_parser.py  docx_to_md.py  excel_source.py  excel_writer.py  exceptions.py  gen_spec.py  gen_xlsx.py  llm_client.py  main.py  md_handler.py  md_table.py  models.py  requirements.txt  test_fix.py
data/: excel_template.xlsx  todo.docx  todo_styled.docx  word_template.docx  功能清单-录入-模板 (2).xlsx  功能清单-录入-模板.xlsx  附件2-闽市移需【202501】18579号76-关于和乐业抢号营销功能专区建设的需求（和乐业）项目功能点拆分表V1.0.0_拆分表.md  附件2-闽市移需【202501】18579号76-关于和乐业抢号营销功能专区建设的需求（和乐业）项目功能点拆分表V1.0.0_拆分表_已填充.md
docs/: AI接入点.md  fpa-profiles.md  (+10 more)
(+396 files in other folders)
