[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-tool"
version = "5.0.0"
description = "COSMIC 功能点拆分工具 — 从需求说明书自动生成功能点拆分表"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.0.0",
    "python-docx>=1.0.0",
    "anthropic>=0.50.0",
    "pyyaml>=6.0",
]

[project.scripts]
cosmic = "cosmic_tool.main:main"

[tool.setuptools.packages.find]
include = ["cosmic_tool*"]

[tool.setuptools.package-data]
cosmic_tool = ["py.typed"]
