[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-gen-reimbursement-docs"
version = "1.0.1-alpha"
description = "AI生成项目报账文档 — 从功能清单自动生成全套报账文档"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.0.0",
    "python-docx>=1.0.0",
    "anthropic>=0.50.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pywin32>=300",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ard = "ai_gen_reimbursement_docs.cli.main:main"

[tool.setuptools.packages.find]
include = ["ai_gen_reimbursement_docs*"]

[tool.setuptools.package-data]
ai_gen_reimbursement_docs = ["py.typed", "licensing/*.pem"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
markers = [
    "slow: marks slow integration tests",
]
